# media-organizer

./: README.md  profiles.sample.yaml  pyproject.toml
src/media_organizer/: __init__.py  __main__.py  cli.py  config.py  media_scanner.py  metadata.py  organizer.py  templates.py
tests/: test_config.py  test_metadata_example_files.py  test_metadata_types.py  test_organizer.py  test_templates.py
tests/data/: profiles.yaml
